fix: filter no longers overflow for safari

--- a/src/css/modal.css
+++ b/src/css/modal.css
@@ -153,7 +153,7 @@
         background-repeat: no-repeat;
         background-position: right 8px center;
         padding-right: 28px;
-        min-width: 167px; /*Ah yes arbitrary number*/
+        min-width:130px; /*Ah yes arbitrary number*/
     }
     .filter-dropdown:focus {
         border-color: var(--color-ctp-mauve);
